# MOVIN-Isaac-Plugin

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
data/: movinman_mesh.npz  movinman_skeleton.xml
examples/: mocap_to_isaaclab.py
