[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movin-isaac-plugin"
version = "0.1.0"
description = "MOVIN motion capture integration for Isaac Lab"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "mujoco>=3.0.0",
    "mink>=0.1.0",
    "loop-rate-limiters>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["movin_sdk_python"]
include = ["movin_sdk_python*"]

[tool.setuptools.package-data]
"movin_sdk_python" = ["**/*.xml", "**/*.json", "**/*.STL"]
